Start replacing method signature with one that takes partition ID and filename list